syntax = "proto3";

package App.Service;

message TestRequest {
    bytes   name    = 1;
    int64   id      = 2;
    bool    flag    = 3;
}

message TestResponse {
    int64   status  = 1;
}

service TestService
{
    rpc Test(TestRequest) returns (TestResponse) {}
}